--- a/notebooks/EDA_Netflix.ipynb
+++ b/notebooks/EDA_Netflix.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "37aa9849",
    "metadata": {},
    "outputs": [
@@ -245,14 +245,17 @@
    ],
    "source": [
     "df = pd.read_csv(\"../data/netflix_titles.csv\")\n",
+    "#Informacipin general del dataset\n",
     "df.info()\n",
+    "#Estadística descriptiva\n",
     "df.describe(include='all').T\n",
+    "#Revisión de valores nulos\n",
     "df.isnull().sum().sort_values(ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "f9cc706c",
    "metadata": {},
    "outputs": [
@@ -279,16 +282,16 @@
     "\n",
     "# Eliminar filas sin tipo o título\n",
     "df.dropna(subset=['type', 'title'], inplace=True)\n",
-    "# 1️⃣ Quitar espacios al inicio y final de cada fecha\n",
+    "# Quitar espacios al inicio y final de cada fecha\n",
     "df['date_added'] = df['date_added'].astype(str).str.strip()\n",
     "\n",
-    "# 2️⃣ Convertir a datetime ignorando errores (los valores que no pueda convertir los pondrá como NaT)\n",
+    "#Convertir a datetime ignorando errores (los valores que no pueda convertir los pondrá como NaT)\n",
     "df['date_added'] = pd.to_datetime(df['date_added'], errors='coerce')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "9324e81e",
    "metadata": {},
    "outputs": [
@@ -304,6 +307,7 @@
     }
    ],
    "source": [
+    "#Análisis exploratorio (EDA)\n",
     "sns.countplot(data=df, x='type')\n",
     "plt.title(\"Distribución de películas y series en Netflix\")\n",
     "plt.xlabel(\"Tipo de contenido\")\n",
@@ -313,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b4945313",
    "metadata": {},
    "outputs": [
@@ -329,6 +333,7 @@
     }
    ],
    "source": [
+    "#Evolucion del contenido a lo largo de los años\n",
     "df['release_year'].value_counts().sort_index().plot(kind='bar', figsize=(12,6))\n",
     "plt.title(\"Cantidad de estrenos por año\")\n",
     "plt.xlabel(\"Año de lanzamiento\")\n",
@@ -338,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "2fc4e7cd",
    "metadata": {},
    "outputs": [
@@ -354,6 +359,7 @@
     }
    ],
    "source": [
+    "#Países con más producciones\n",
     "top_countries = df['country'].value_counts().head(10)\n",
     "\n",
     "sns.barplot(x=top_countries.values, y=top_countries.index)\n",
@@ -365,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "cf89568b",
    "metadata": {},
    "outputs": [
@@ -381,6 +387,7 @@
     }
    ],
    "source": [
+    "#Generos más populares\n",
     "from collections import Counter\n",
     "\n",
     "all_genres = ','.join(df['listed_in'].dropna()).split(',')\n",
@@ -391,6 +398,23 @@
     "sns.barplot(data=top_genres, x='Cantidad', y='Género')\n",
     "plt.title(\"Top 10 géneros en Netflix\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c540056",
+   "metadata": {},
+   "source": [
+    "## Conclusiones\n",
+    "\n",
+    "- Netflix tiene una clara predominancia de **películas** sobre series.\n",
+    "- La producción ha aumentado significativamente desde 2015, mostrando un fuerte crecimiento del catálogo.\n",
+    "- **Estados Unidos, India y Reino Unido** son los países con mayor cantidad de producciones.\n",
+    "- Los géneros más frecuentes incluyen **documentales, dramas y comedias**, reflejando la diversidad del catálogo.\n",
+    "- El análisis sugiere que Netflix ha apostado fuertemente por contenido internacional en los últimos años.\n",
+    "\n",
+    "---\n",
+    "Este análisis demuestra mi capacidad para limpiar, explorar y comunicar insights clave a partir de datos reales.\n"
    ]
   }
  ],
